@@ -13,7 +13,8 @@ Create a skeleton for a new package depending on Rcpp
 \usage{
 Rcpp.package.skeleton(name = "anRpackage", list = character(), 
 	environment = .GlobalEnv, path = ".", force = FALSE, 
-	namespace = TRUE, code_files = character())
+	namespace = TRUE, code_files = character(), 
+	example_code = TRUE )
 }
 \arguments{
 	\item{name}{See \link[utils]{package.skeleton}}
@@ -23,6 +24,7 @@ Rcpp.package.skeleton(name = "anRpackage", list = character(),
 	\item{force}{See \link[utils]{package.skeleton}}
 	\item{namespace}{See \link[utils]{package.skeleton}}
 	\item{code_files}{See \link[utils]{package.skeleton}}
+	\item{example_code}{If TRUE, example c++ code using Rcpp is added to the package}
 }
 \details{
 	In addition to \link[utils]{package.skeleton} : 
@@ -38,7 +40,8 @@ Rcpp.package.skeleton(name = "anRpackage", list = character(),
 	\samp{PKG_CXXFLAGS} and \samp{PKG_LIBS} to accomodate the necessary flags
 	to link with the Rcpp library. 
 	
-	Example files \samp{rcpp_hello_world.h} and \samp{rcpp_hello_world.cpp}
+	If the \code{example_code} argument is set to \code{TRUE}, 
+	xample files \samp{rcpp_hello_world.h} and \samp{rcpp_hello_world.cpp}
 	are also created in the \samp{src}. An R file \samp{rcpp_hello_world.R} is 
 	expanded in the \samp{R} directory, the \code{rcpp_hello_world} function
 	defined in this files makes use of the C++ function \samp{rcpp_hello_world}
